--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.5",
     "daisyui": "^5.0.35",
     "firebase": "^11.10.0",
+    "motion": "^12.23.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
