--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.5",
+    "axios": "^1.10.0",
     "daisyui": "^5.0.35",
     "firebase": "^11.10.0",
     "motion": "^12.23.6",
