--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.10.0",
     "daisyui": "^5.0.35",
     "firebase": "^11.10.0",
+    "moment": "^2.30.1",
     "motion": "^12.23.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
